# meraki-dashboard-exporter

./: .codacy.yaml  .dcignore  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .safety-project.ini  .secrets.baseline  .snyk  AGENTS.md  CHANGELOG.md  CLAUDE.md  DOCKER_BUILDKIT.md  Dockerfile  METRICS.md  Makefile  OTEL.md  PROFILING.md  PYROSCOPE_ALLOY_SETUP.md  README.md  RELEASE.md  SECURITY.md  TRACING.md  alloy-pyroscope-config.alloy  alloy-pyroscope-high-frequency.alloy  codecov.yml  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.py  editorconfig  futuremetrics.txt  main.py  mkdocs.yml  prometheus.yml  pyproject.toml  refactor-claude.txt  refactor-gemini.txt  refactor.txt  release-please-config.json  renovate.json  (+4 more)
.codacy/: configure-codacy-summary.json
.github/: CLAUDE.md  container-structure-test.yaml  labeler.yml
.github/actions/report-drift/: action.yml
.github/workflows/: api-drift.yml  bandit.yml  ci.yml  claude-code-review.yml  claude.yml  codeql.yml  dependency-review.yml  docker-build.yml  docker-security.yml  docs.yml  issue-triage.yml  label.yml  publish.yml  pysa.yml  python-publish.yml  release-please-lock.yml  release-please.yml  scorecard.yml  semgrep.yml  snyk-security.yml  snyk.yml  stale.yml  summary.yml  trigger-docs-sync.yml  zizmor.yml
charts/meraki-dashboard-exporter/: .helmignore  CLAUDE.md  Chart.yaml  README.md  values.yaml
charts/meraki-dashboard-exporter/templates/: NOTES.txt  _helpers.tpl  _validation.tpl  configmap.yaml  deployment.yaml  hpa.yaml  (+7 more)
collectors/devices/: mx_wan_collector.py
dashboards/: CLAUDE.md  api-usage-licensing.json  assurance-alerts.json  client-overview.json  exporter-monitoring.json  mg-cellular-gateways.json  mr-access-points.json  ms-switches.json  mt-sensors.json  mv-security-cameras.json  mx-security-appliances.json  network-health-performance.json  network-overview.json  organization-overview.json
docs/: .meta.yml  404.md  500.md  CLAUDE.md  README.md  api-call-audit.md  changelog.md  collectors.md  comparison.md  config.md  data-freshness.md  deployment-operations.md  extending-collectors.md  faq.md  getting-started.md  index.md  integration-dashboards.md  llms.txt  privacy.md  robots.txt  scaling-guide.md  security.md  stability.md  support-matrix.md  tags.md  troubleshooting.md  upgrading.md
docs/adr/: 001-collector-architecture.md  002-error-handling-strategy.md  index.md
docs/collectors/: .meta.yml  index.md  reference.md
docs/development/: release-process.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/includes/: abbreviations.md
docs/integration/: grafana.md  opentelemetry.md  prometheus.md
docs/javascripts/: seo.js
docs/metrics/: .meta.yml  alerts.md  devices.md  index.md  metrics.md  organization.md  overview.md
docs/observability/: otel.md  scheduler.md  tracing.md
docs/operations/: deployment.md  monitoring.md  performance.md  troubleshooting.md
docs/patterns/: api-response-formats.md  index.md  metric-collection-strategies.md
docs/reference/: endpoints.md
docs/stylesheets/: extra.css
evidence/: README.md  api-conformance.md  findings-synthesis.md  live-api-verification.md  metric-contract-audit.md  resilience-failure-modes.md  scale-and-capacity.md
examples/: README.md  prometheus-rules.yaml  refactored_alerts_with_logging.py  test_example_with_helpers.py
grafana/: CLAUDE.md
grafana/alerts/: alerting-rules.yaml  recording-rules.yaml
grafana/dashboards/: meraki-client-telemetry.json  meraki-clients.json  meraki-devices.json  meraki-network-health.json  meraki-organization.json  self-observability.json
scripts/: CLAUDE.md  generate-docs.sh  generate_collector_docs.py  generate_config_docs.py  generate_endpoints_docs.py  generate_env_example.py  generate_helm_config.py  generate_metrics_docs.py  test-docker-build.sh
spec/: README.md  oasdiff-ignore.txt
src/meraki_dashboard_exporter/: CLAUDE.md  __init__.py  __main__.py  __version__.py  app.py  profiling.py  py.typed
tests/: CLAUDE.md  __init__.py  conftest.py  test_api_client.py  test_client_sensor_gateway_connections.py  test_config.py  test_error_handling.py  test_helm_config_drift.py  test_inventory_service.py  test_large_org_fixture.py  test_managed_task_group.py  test_metrics.py  test_network_filter.py  test_network_filter_integration.py  test_network_filter_settings.py  test_startup_filter.py  test_webhook.py  test_webhook_handler.py
tests/collectors/: test_snmp_cloud_controller.py
tests/fixtures/: __init__.py  large_org.py
tests/helpers/: __init__.py  base.py  factories.py  large_org_fixture.py  metrics.py  mock_api.py  test_factories_timestamps.py  test_metric_assertions.py  test_mock_api_builder.py
tests/integration/: test_collection_cycle.py  test_collector_manager_integration.py  test_metric_expiration.py  test_metrics_integration.py
tests/unit/: __init__.py  test_alerts_collector.py  test_alerts_scheduler_gates.py  test_api_helpers.py  test_api_models.py  test_api_usage_collector.py  test_app_endpoints.py  test_app_offload.py  test_app_resolve_loop.py  test_app_scheduler.py  test_app_webhook_size_cap.py  test_async_edge_cases.py  test_async_utils.py  test_batch_processing.py  test_build_info.py  test_cache_cleanup.py  test_cardinality_bounded.py  test_cardinality_controls.py  test_client_overview_collector.py  test_client_store.py  test_clients_collector.py  test_clients_collector_enhanced.py  test_clients_scheduler_gates.py  test_collection_utilization.py  test_collector_base.py  test_config_admins_collector.py  test_config_collector.py  test_config_file_secrets.py  test_config_logger.py  test_config_models_validation.py  test_config_saml_collector.py  test_config_scheduler_gates.py  test_detier_631.py  test_device_availability_history_collector.py  test_device_collector.py  test_device_scheduler_gates.py  test_discovery_service.py  test_dns_resolver.py  test_domain_models.py  test_early_access_collector.py  (+51 more)
tools/apidrift/: CLAUDE.md  __main__.py  conformance.py  models.py  report.py  scanner.py  suggest.py
(+188 files in other folders)
