[project]
name = "meraki-dashboard-exporter"
version = "0.1.0"
description = "Prometheus exporter for Cisco Meraki Dashboard API metrics"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "meraki>=2.0.3",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "prometheus-client>=0.21.0",
    "structlog>=24.4.0",
    "httpx>=0.27.0",
    "anyio>=4.6.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "opentelemetry-api>=1.29.0",
    "opentelemetry-sdk>=1.29.0",
    "opentelemetry-exporter-otlp>=1.29.0",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
]

[tool.ruff]
target-version = "py313"   
line-length    = 100
preview = true
indent-width   = 4

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "D",   # pydocstyle
    "N",  # pep8-naming
    "Q",  # flake8-quotes
]
extend-select = [
  "PL",     # pylint rules
  "PTH",    # pathlib recommendations
  "PERF",   # performance tweaks
  "NPY",    # NumPy-specific hints
]
ignore = [
    "D202",  # no blank lines after function docstring
    "D203",  # one blank line before class
    "D212",  # multi-line-summary-first-line
    "D213",  # multi-line docstring summary should start at the second line
]

[dependency-groups]
dev = [
    "ruff>=0.12.2",
    "ty>=0.0.1a13",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "mypy>=1.13.0",
    "httpx>=0.27.0",
]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
no_implicit_reexport = true
namespace_packages = true
show_error_codes = true
show_column_numbers = true
pretty = true

[[tool.mypy.overrides]]
module = ["meraki.*", "prometheus_client.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
